# Koch-Morse-Code-Trainer

./: CHANGELOG.md  LICENSE  README.md  TODO.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  global.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: callsign_no_filter.txt  callsign_no_slash.txt  callsign_only_short.txt  word_abbrev.txt  word_common.txt  word_qcode_common.txt  word_qcode_uncommon.txt
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/locales/: en.json  zh.json
src/components/: AudioWaveform.tsx  CalendarHeatmap.tsx  ComparisonText.tsx  DataManagement.tsx  GenericTraining.tsx  GenericWelcome.tsx  HighlightedText.tsx  StatisticsChart.tsx  TitleBar.tsx
src/contexts/: AppearanceContext.tsx  ThemeContext.tsx
src/hooks/: useLessonManager.ts  useMorseGenerator.ts  useMorsePlayer.ts  useProgress.ts  useStatisticalToolset.ts  useTextGenerator.ts  useTiming.ts  useWaveform.ts
src/layouts/: MainLayout.tsx
src/lib/: audio.ts  audioGenerator.ts  constants.ts  encoder.ts  index.ts  lesson.ts  timing.ts  types.ts
src/pages/: AboutPage.tsx  ActivityPage.tsx  AdvancedPage.tsx  BasicsPage.tsx  GeneratorPage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TrainingPage.tsx
src/pages/advanced/: CallsignTraining.tsx  CallsignWelcome.tsx  LeaderboardPage.tsx  QTCTraining.tsx  QTCWelcome.tsx  ScorePage.tsx  WordTraining.tsx  WordWelcome.tsx
src/pages/basics/: OptionsPage.tsx  (+2 more)
src/services/: audioPlayer.ts  contentGenerator.ts  courseManager.ts  dataLoader.ts  playerController.ts  previewGenerator.ts  progressService.ts  recordManager.ts  statisticalToolset.ts  textGenerator.ts
src/stores/: advancedStore.ts  basicsStore.ts  generatorStore.ts  optionsStore.ts  settingsStore.ts  trainingStore.ts
src/themes/: darkTheme.tsx  kochDarkTheme.tsx  kochLightTheme.tsx  lightTheme.tsx
src/utils/: i18n.ts  logger.ts  textChecker.ts
