[package]
name = "koch"
version = "2.0.0-alpha.1"
description = "a morse code trainer based on the koch method"
authors = ["Xiaokang HU"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
rand = "0.10.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
